internal/render/testdata/jackett/k8s/play/jackett/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: jackett
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - jackett.k8s.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jackett
          port: 9117
