internal/render/testdata/jackett/k8s/play/jackett/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: jackett
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9117
