internal/render/testdata/jackett/k8s/play/jackett/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: jackett
    spec:
      containers:
        - name: jackett
          image: docker.io/linuxserver/jackett:v0.22.2037-ls67
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9117
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
